[package]
name = "hakka"
version = "0.1.0"
authors = ["Simon Whitehead <chemnova@gmail.com>"]

[lib]
name = "vm"
path = "vm/src/lib.rs"

[[bin]]
name = "training-1"
path = "training-1/src/main.rs"

[dependencies]
byteorder = "0.5.3"
rs6502 = "0.2.0"
vm = { path = "vm" }

[dependencies.sdl2]
version = "*"
features = ["image", "ttf", "gfx"]